--- a/app/src/main/res/layout/card_view_messages.xml
+++ b/app/src/main/res/layout/card_view_messages.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/card_view_message"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
@@ -34,7 +33,8 @@
                 android:layout_toLeftOf="@+id/time_message"
                 android:layout_alignParentLeft="true"
                 android:text=""
-                android:layout_weight="50"
+                android:textSize="15dp"
+                android:layout_weight="1"
                 />
             <TextView
                 android:id="@+id/time_message"
@@ -53,11 +53,23 @@
             android:paddingLeft="2dp">
             <TextView
                 android:id="@+id/message_message"
-                android:layout_width="match_parent"
+                android:layout_width="500dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|left"
-                android:text="Lorem "
-                />
+                android:text=""
+                android:layout_toLeftOf="@+id/delete_message"
+                android:paddingRight="50dp"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+            <ImageView
+                android:layout_toRightOf="@+id/message_message"
+                android:id="@+id/delete_message"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="50dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/threedots"/>
         </LinearLayout>
         <LinearLayout
             android:id="@+id/author_layout_message"
@@ -70,17 +82,17 @@
             <TextView
                 android:layout_below="@+id/message_layout_message"
                 android:id="@+id/info_text_message"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:text=""
                 android:layout_weight="1"/>
-            <ImageView
-                android:layout_toRightOf="@+id/message_layout_message"
-                android:id="@+id/delete_message"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/delete"
-                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/messageid"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_toRightOf="@+id/delete_message"
+                android:layout_alignParentRight="true" />
         </LinearLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
