--- a/app/src/main/res/layout/send_fragment.xml
+++ b/app/src/main/res/layout/send_fragment.xml
@@ -1,24 +1,111 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:background="#f4f4f4"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view_message"
+    android:layout_height="500dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <WebView
-        android:id="@+id/send_web_view"
-        android:scrollbars="none"
-        android:background="#f4f4f4"
+    android:layout_margin="0dp">
+    <LinearLayout
+        android:id="@+id/title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:elevation="4dp"
+        android:layout_marginBottom="20dp">
+        <ImageButton
+            android:id="@+id/left_arrow_message"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/leftarrow"
+            android:layout_toLeftOf="@+id/title_dialog"
+            android:layout_gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/title_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:paddingTop="19dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_toRightOf="@+id/left_arrow_message"
+            android:text="Send Message"
+            android:textAppearance="@style/dialog_title"/>
+    </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="1dp"
-        />
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/addView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/ads_unit_id">
-    </com.google.android.gms.ads.AdView>
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="0dp"
+        android:layout_marginTop="50dp">
+        <LinearLayout
+            android:id="@+id/author_layout"
+            android:layout_marginTop="30dp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/message_layout"
+            android:paddingLeft="2dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/input_message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:background="@drawable/message_border_line"
+                android:breakStrategy="balanced"
+                android:inputType="textMultiLine"
+                android:minLines="0"
+                android:hint="Type your message..." />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/footer"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/author_layout"
+            android:layout_marginBottom="10dp">
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_send"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="24dp"
+                android:padding="12dp"
+                android:text="Send"
+                android:textColor="@drawable/button_selector"
+                android:background="@drawable/button_background"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/title_network"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_alignParentBottom="true"
+            android:background="#F4F4F4"
+            android:paddingLeft="200dp"
+            android:paddingTop="15dp"
+            android:paddingRight="2dp"
+            android:layout_marginBottom="0dp">
+            <ImageButton
+                android:id="@+id/offline_message"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="5dp"
+                android:background="#f4f4f4"
+                android:layout_toLeftOf="@+id/network_state"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/network_state_message"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingBottom="15dp"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:text=""
+                android:textAppearance="@style/network_style"/>
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
