--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_search"
-        android:orderInCategory="100"
-        android:title=""
-        android:icon="@drawable/search"
-        app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.support.v7.widget.SearchView"/>
-    <item
+ <item
+     android:id="@+id/action_messages"
+     android:orderInCategory="100"
+     android:title=""
+     android:icon="@drawable/messagedefault"
+     app:showAsAction="always"/>
+ <item
         android:id="@+id/action_download"
         android:orderInCategory="100"
         android:title=""
