--- a/app/src/main/res/values/CodeFont.xml
+++ b/app/src/main/res/values/CodeFont.xml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Subject" parent="@android:style/TextAppearance.DeviceDefault.Medium">
-        <item name="android:textColor">#000</item>
+        <item name="android:textSize">17dp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+    <style name="no_messages" parent="@android:style/TextAppearance.DeviceDefault.Large">
+        <item name="android:textSize">25dp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+    <style name="question" parent="@android:style/TextAppearance.DeviceDefault.Medium">
         <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
     <style name="Message" parent="@android:style/TextAppearance.DeviceDefault.Small">
         <item name="android:textSize">15dp</item>
     </style>
     <style name="Time" parent="@android:style/TextAppearance.DeviceDefault.Medium">
 
+    </style>
+    <style name="dialog_title" parent="@android:style/TextAppearance.DeviceDefault.Medium">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">20dp</item>
+    </style>
+    <style name="network_style" parent="@android:style/TextAppearance.DeviceDefault.Medium">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">20dp</item>
+    </style>
+    <style name="sender_style" parent="@android:style/TextAppearance.DeviceDefault.Small">
+        <item name="android:textStyle">normal|italic</item>
+        <item name="android:textColor">@color/menuColor</item>
     </style>
 </resources>
