--- a/app/src/main/res/layout/downloads.xml
+++ b/app/src/main/res/layout/downloads.xml
@@ -4,15 +4,13 @@
     android:background="#f4f4f4"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="none"
         android:background="#f4f4f4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="1dp"
-        />
+        android:paddingTop="1dp" />
     <com.google.android.gms.ads.AdView
         android:id="@+id/addView"
         android:layout_width="wrap_content"
