--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,15 +9,15 @@
             android:icon="@drawable/home"
             android:title="Home"
             />
-
         <item
             android:id="@+id/nav_contacts"
             android:icon="@drawable/contacts"
-            android:title="Contacts" />
+            android:title="Contacts"
+            android:visible="false"/>
         <item
             android:id="@+id/nav_about"
-            android:icon="@drawable/about"
-            android:title="About" />
+            android:icon="@drawable/website"
+            android:title="Website"/>
         <item
             android:id="@+id/nav_help"
             android:icon="@drawable/help"
@@ -25,7 +25,7 @@
         <item
             android:id="@+id/nav_exit"
             android:icon="@drawable/exit"
-            android:title="Exit" />
+            android:title="Exit"/>
           </menu>
         </item>
 
