--- a/app/src/main/res/layout/upload_fragment.xml
+++ b/app/src/main/res/layout/upload_fragment.xml
@@ -2,9 +2,19 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view_upload"
-    android:layout_height="500dp"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:layout_margin="0dp">
+    <ScrollView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:scrollbars="none"
+        android:layout_alignParentTop="true">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true">
     <LinearLayout
         android:id="@+id/title_layout"
         android:layout_width="match_parent"
@@ -14,7 +24,7 @@
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
         android:elevation="4dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="10dp">
         <ImageButton
             android:id="@+id/left_arrow"
             android:layout_width="30dp"
@@ -34,17 +44,63 @@
             android:text="Upload Document"
             android:textAppearance="@style/dialog_title"/>
     </LinearLayout>
-    <RelativeLayout
+
+    <LinearLayout
         android:id="@+id/title_"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="0dp"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="5dp">
 
-
+        <LinearLayout
+            android:id="@+id/sender_layout"
+            android:layout_marginTop="30dp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:paddingLeft="2dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/sender_doc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:inputType="textPersonName"
+                android:background="@drawable/message_border_line"
+                android:hint="Sender..." />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/doc_title_layout"
+            android:layout_marginTop="30dp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:paddingLeft="2dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/title_doc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:inputType="textPersonName"
+                android:background="@drawable/message_border_line"
+                android:hint="title..." />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/desc_layout"
+            android:layout_marginTop="30dp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:paddingLeft="2dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/desc_doc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:inputType="textPersonName"
+                android:background="@drawable/message_border_line"
+                android:hint="description..."/>
+        </LinearLayout>
         <LinearLayout
             android:id="@+id/author_layout"
             android:layout_marginTop="10dp"
@@ -52,13 +108,23 @@
             android:layout_width="match_parent"
             android:layout_below="@+id/message_layout"
             android:paddingLeft="2dp"
+            android:background="@drawable/dotted_line"
             android:layout_marginBottom="4dp">
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_choose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="12dp"
+                android:text="Choose file"
+                android:textColor="@drawable/button_selector"
+                android:background="@drawable/button_background"/>
             <TextView
                 android:id="@+id/title_choose"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@drawable/dotted_line"
-                android:text="Choose file"
+                android:layout_toRightOf="@+id/btn_choose"
+                android:text="No file chosen"
                 android:textAppearance="@drawable/dotted_line_selector"/>
         </LinearLayout>
         <LinearLayout
@@ -78,7 +144,6 @@
                 android:text="Upload"
                 android:textColor="@drawable/button_selector"
                 android:background="@drawable/button_background"/>
-
         </LinearLayout>
         <LinearLayout
             android:id="@+id/title_network"
@@ -108,5 +173,7 @@
                 android:text=""
                 android:textAppearance="@style/network_style"/>
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
+    </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
